# ChangeLog for dev-python/github2
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*github2-0.6.0 (21 Dec 2011)

  21 Dec 2011; James Rowe <jnrowe@gmail.com> +github2-0.6.0.ebuild,
  +files/github2-0.6.0-Python_2_4_fix.patch:
  Version bump [514].

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  17 Oct 2011; James Rowe <jnrowe@gmail.com>
  files/github2-0.4.0-test_build_path.patch:
  Added patch description.

  06 Sep 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed unused USE=proxy description.

*github2-0.5.2 (06 Sep 2011)

  06 Sep 2011; James Rowe <jnrowe@gmail.com> +github2-0.5.2.ebuild:
  Version bump [464].

  24 Jul 2011; James Rowe <jnrowe@gmail.com> -github2-0.4.1.ebuild,
  github2-0.5.0.ebuild:
  Keyworded x86.

  24 Jul 2011; James Rowe <jnrowe@gmail.com> github2-0.5.0.ebuild:
  Keyworded amd64.

*github2-0.5.1 (20 Jul 2011)

  20 Jul 2011; James Rowe <jnrowe@gmail.com> +github2-0.5.1.ebuild:
  Version bump [434].

*github2-0.5.0 (24 Jun 2011)

  24 Jun 2011; James Rowe <jnrowe@gmail.com> +github2-0.5.0.ebuild:
  Version bump [401].

  24 Jun 2011; James Rowe <jnrowe@gmail.com> -github2-0.4.0.ebuild,
  github2-0.4.1.ebuild:
  Keyworded x86.

  24 Jun 2011; James Rowe <jnrowe@gmail.com> github2-0.4.1.ebuild:
  Keyworded amd64.

  22 Jun 2011; James Rowe <jnrowe@gmail.com> -github2-0.3.1.ebuild,
  github2-0.4.0.ebuild:
  Keyworded x86.

  22 Jun 2011; James Rowe <jnrowe@gmail.com> github2-0.4.0.ebuild:
  Keyworded amd64.

*github2-0.4.1 (24 May 2011)

  24 May 2011; James Rowe <jnrowe@gmail.com> +github2-0.4.1.ebuild:
  Version bump [378].

  23 May 2011; James Rowe <jnrowe@gmail.com> github2-0.4.0.ebuild,
  metadata.xml:
  Added proxy support deps.

  23 May 2011; James Rowe <jnrowe@gmail.com> github2-0.4.0.ebuild:
  Support building documentation.

*github2-0.4.0 (23 May 2011)

  23 May 2011; James Rowe <jnrowe@gmail.com> +github2-0.4.0.ebuild,