@@ -2,12 +2,11 @@
 Hash: SHA512
 
 DIST github2-0.5.1.tar.gz 120238 RMD160 7f240ab59af32e8031be2615fa2177450e5c4790 SHA1 c95dac0b1d1cf963452b8914d6ba7e481d2b778a SHA256 a34bc9b4ba50760b018614e0c6569469305280417c61ae376a570f1b35b3ed8b
-DIST github2-0.5.2.tar.gz 127999 RMD160 8b86fc1d763556bd4759e115682f36c54baa8913 SHA1 d5bf0e6efff0b9b76dae37f015e5bb378a07c0e0 SHA256 fa4b66a0082a104926c0e48e4f1817955d9294ae8bd5f7fcc67a604800747adb
 DIST github2-0.6.0.tar.gz 166658 RMD160 94c87b964de6c9ede43ca4473d7a339ffb04ded5 SHA1 5252ef65400d4cb10ef86993515377d5799f563c SHA256 7e2d6b785d3f2b242f01ea4177bc80a341d604f36c001d7d50d638a77e795abc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7xysIACgkQzJrj3cAXR0lrvACgjluQevZPGfQ90/mCApDLTSq+
-uSIAnRAUhvvCACuuamP3rpZcSJHe4SU5
-=BW7T
+iEYEAREKAAYFAk7xy1AACgkQzJrj3cAXR0nedgCeIJlKKtSGAiLRMeosQam2PCg7
+DisAn2cLK/cFgcAa3YyMcseeLmlyvNou
+=lXw7
 -----END PGP SIGNATURE-----
