@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm prepare test unpack
-DEPEND=dev-python/setuptools doc? ( dev-python/cloud_sptheme dev-python/sphinx dev-python/sphinxcontrib-cheeseshop ) test? ( dev-python/nose ) >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-DESCRIPTION=Github API v2 library for Python
-EAPI=3
-HOMEPAGE=http://pypi.python.org/pypi/github2/
-IUSE=doc examples test
-KEYWORDS=~amd64 ~x86
-LICENSE=BSD
-RDEPEND=|| ( >=dev-lang/python-2.6 dev-python/simplejson ) >=dev-python/httplib2-0.7.1 dev-python/python-dateutil >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-SLOT=0
-SRC_URI=mirror://pypi/g/github2/github2-0.5.2.tar.gz
-_eclasses_=base	809ab15a673823938260f6b17661c3f1	distutils	b4c334e216d998c4ce4b750cb091e42e	eutils	ac049c4fa17000293228df51f9460566	jnrowe-pypi	4211dd4b4d8a9d76f3899257c8b7bbad	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	portability	0d9341be2bffb3ace510580f192f231e	python	68cfdfd857b7b9e8f75a3fa84d60be94	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=34a35393d92e4c08aeee5df62d254563
