@@ -56,10 +56,8 @@ REM 2012-02-02 *1 MSG %"Stabilise x86 www-apps/mnemosyne-0.12%" %a
 REM 2012-02-02 *1 MSG %"Stabilise amd64 dev-python/pycparser-2.04%" %a
 REM 2012-02-02 *1 MSG %"Stabilise x86 dev-python/pycparser-2.04%" %a
 REM 2012-02-04 *1 MSG %"Stabilise amd64 dev-python/rstctl-0.4%" %a
-REM 2012-02-04 *1 MSG %"Stabilise x86 dev-python/github2-0.5.2%" %a
 REM 2012-02-04 *1 MSG %"Stabilise x86 app-misc/hubugs-0.11.0%" %a
 REM 2012-02-04 *1 MSG %"Stabilise x86 dev-python/rstctl-0.4%" %a
-REM 2012-02-06 *1 MSG %"Stabilise amd64 dev-python/github2-0.5.2%" %a
 REM 2012-02-06 *1 MSG %"Stabilise amd64 app-misc/hubugs-0.11.0%" %a
 REM 2012-02-19 *1 MSG %"Stabilise amd64 dev-python/pycparser-2.05%" %a
 REM 2012-02-19 *1 MSG %"Stabilise x86 dev-python/pycparser-2.05%" %a
