@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Dec 2011; James Rowe <jnrowe@gmail.com> -github2-0.5.2.ebuild:
+  Removed stale ebuild, 0.6.0 is eligible for stabilisation before 0.5.2 will
+  be eligible again.
+
 *github2-0.6.0 (21 Dec 2011)
 
   21 Dec 2011; James Rowe <jnrowe@gmail.com> +github2-0.6.0.ebuild,
